# dtui

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.example.yaml  dist-workspace.toml  renovate.json
.github/workflows/: docker-build.yml  docker-release.yml  pr-build.yml  release.yml  test.yml
.zed/: tasks.json
src/: app_state.rs  config.rs  docker.rs  input.rs  logs.rs  main.rs  stats.rs  types.rs  ui.rs
src/snapshots/: docker_monitor__ui__tests__empty_container_list.snap  docker_monitor__ui__tests__multiple_containers_mixed_usage.snap  docker_monitor__ui__tests__single_container_low_usage.snap
