[package]
name = "docker-monitor"
version = "0.1.0"
edition = "2024"
description = "A terminal-based Docker container monitoring tool with real-time CPU and memory metrics"
license = "MIT"
repository = "https://github.com/amir20/dtui"
homepage = "https://github.com/amir20/dtui"
documentation = "https://github.com/amir20/dtui"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bollard = {version= "0.19.3", features = ["ssh"]}
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
insta = "1.34"
mockall = "0.13"

[profile.release]
debug = true  # Enable debug symbols for profiling


[package.metadata.release]
publish = false
push = true
tag = true
